Fix error : image max size -> rejected files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   [maxFileSize]="5000"
   [maxImageFileSize]="2000"
   [ignoreOversizedFiles]="false"
-  [ignoreOversizedImageFiles]="false"
+  [ignoreOversizedImageFiles]="true"
   [allowFullWindowDrop]="true"
   [label]="'Déposer une photo ici ou cliquer pour importer'"
   [labelHelp]="'Fichiers jpeg et png uniquement, 5 mb max par image'"
