--- a/projects/tb-dropfile-lib/src/lib/drop-box/drop-box.component.scss
+++ b/projects/tb-dropfile-lib/src/lib/drop-box/drop-box.component.scss
@@ -98,6 +98,7 @@ $dropbox-primary-lighter: rgba($dropbox-primary-color, .5);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
 
   .imageCard {
     margin: 20px;
@@ -121,7 +122,7 @@ $dropbox-primary-lighter: rgba($dropbox-primary-color, .5);
       margin-top: -5px;
       display: flex;
       flex-direction: row;
-      justify-content: end; // space-between
+      justify-content: space-between;
 
       .additionalInfoIcons {
         margin-top: 8px;
