add "reset component" input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,12 @@
   [uploadTbPhotoFiles]="true"
   [showTable]="false"
   [showThumbnails]="true"
+  [reset]="_reset"
   (acceptedFiles)="acceptedFiles($event)"
   (rejectedFiles)="rejectedFiles($event)"
   (deletedFiles)="deletedFiles($event)"
   (geolocatedPhotoLatLng)="geolocatedPhotoLatLng($event)"></tb-dropfile-box>
 </div>
+
+<br /><br />
+<p (click)="reset()">RESET</p>
