--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
   [labelHelp]="'Fichiers jpeg et png uniquement, 5 mb max par image'"
   [labelFullWindow]="'Déposer une photo ici'"
   [uploadTbPhotoFiles]="true"
-  [showTable]="false"
-  [showThumbnails]="true"
+  showTable="false"
+  showThumbnails="true"
   [reset]="_reset"
   (acceptedFiles)="acceptedFiles($event)"
   (rejectedFiles)="rejectedFiles($event)"
