set tooltip + button color prop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
   (geolocatedPhotoLatLng)="geolocatedPhotoLatLng($event)"></tb-dropfile-box>
 </div>
 
-<button mat-stroked-button color="primary" (click)="sendImages()">Envoyer les images</button>
+<button mat-stroked-button color="primary" color="primary" (click)="sendImages()">Envoyer les images</button>
 
 <br /><br />
 <p (click)="reset()">RESET</p>
