--- a/projects/tb-dropfile-lib/src/lib/drop-box/drop-box.component.html
+++ b/projects/tb-dropfile-lib/src/lib/drop-box/drop-box.component.html
@@ -1,5 +1,5 @@
 <!-- class attribute is code-side managed-->
-<div class="dropzone"
+<div class="dropzone" matTooltip="Ajouter une photo depuis son ordinateur"
   #dropzone
   droppable
   [_allowedFileTypes]="allowedFileTypes"
@@ -30,7 +30,7 @@
 </div>
 
 <div class="button-action" *ngIf="nbImagesToSend() > 0 && uploadTbPhotoFiles">
-  <!--<button class="tb-dropfile-lib send-images-button" mat-stroked-button color="primary" *ngIf="!sendingImages" (click)="sendFiles()">Enregistrer les fichiers</button>-->
+  <!--<button color="primary" class="tb-dropfile-lib send-images-button" mat-stroked-button color="primary" *ngIf="!sendingImages" (click)="sendFiles()">Enregistrer les fichiers</button>-->
   
 </div>
 
