--- a/projects/tb-dropfile-lib/src/lib/drop-box/drop-box.component.scss
+++ b/projects/tb-dropfile-lib/src/lib/drop-box/drop-box.component.scss
@@ -18,6 +18,9 @@ $dropbox-primary-lighter: rgba($dropbox-primary-color, .5);
     &.over {
       background-color: $dropbox-primary-lighter;
     }
+    &.disabled {
+      border: 1px dashed grey; 
+    }
   }
 
   &.fullWindow {
